Fix the disorder of the window layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ project(SerialPortAssistant VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTORCC ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
-find_package(Qt6 REQUIRED COMPONENTS Gui Qml SerialPort)
+# 添加所需的 Qt 组件：Quick, QuickControls2, SerialPort
+find_package(Qt6 REQUIRED COMPONENTS Quick QuickControls2 SerialPort)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -19,24 +19,20 @@ qt_add_qml_module(appSerialPortAssistant
     URI SerialPortAssistant
     QML_FILES
         Main.qml
-        SOURCES serialhandler.h
-        RESOURCES images.qrc
+    SOURCES serialhandler.h
+    RESOURCES images.qrc
 )
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-set_target_properties(appSerialPortAssistant PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appSerialPortAssistant
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
-)
-
+# 链接库（包含 QuickControls2）
 target_link_libraries(appSerialPortAssistant
     PRIVATE Qt6::Quick
-    PRIVATE Qt6::Quick Qt6::SerialPort
+    PRIVATE Qt6::QuickControls2
+    PRIVATE Qt6::SerialPort
+)
+
+# 可选：为 Windows 设置应用程序图标等（可忽略）
+set_target_properties(appSerialPortAssistant PROPERTIES
+    WIN32_EXECUTABLE TRUE
 )
 
 include(GNUInstallDirs)
