--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_AUTORCC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Quick)
 find_package(Qt6 REQUIRED COMPONENTS Gui Qml SerialPort)
+find_package(Qt6 REQUIRED COMPONENTS Widgets)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -37,6 +38,7 @@ set_target_properties(appSerialPortAssistant PROPERTIES
 target_link_libraries(appSerialPortAssistant
     PRIVATE Qt6::Quick
     PRIVATE Qt6::Quick Qt6::SerialPort
+    PRIVATE Qt6::Widgets
 )
 
 include(GNUInstallDirs)
